--- a/skin/frontend/base/default/css/lily/css/club.css
+++ b/skin/frontend/base/default/css/lily/css/club.css
@@ -73,6 +73,7 @@ address {font-style: normal;}
 .club_member_forget .fieldset {margin:0;padding:0;}
 .club_memberreg_fi_address {font-size:18px;}
 .club_memberreg_fi_address .validation-advice {display:none;}
+.customer_address_mobile_wrap {display: inline-block;}
 .club-rule-content .club_login_txt {width:500px;margin:0 auto;text-align: center;}
 /**/
 .club_member_rule{text-align: center;margin: 0 auto;width: 860px}
@@ -277,111 +278,5 @@ button.btn-checkout span span {padding:5px 25px 5px 25px;display:block;}
 .dis_mobile { display: none }
 .club_ecoupon_nav_m {display:none;}
 @media screen and (max-width:640px) {
-    body,html {background: #f3dedd!important;}
-	.dis_mobile { display: block }
-    .wrap {margin:0!important;}
-	.footer{}
-    .footer .ft_list li {display:block;margin:0 auto;}
-	.page{margin-bottom:0;padding-top:140px;}
-    .page_club {font-size:18px;}
-    .club_tit{font-size: 72px;line-height: 72px}
-    .club_exchange_txt,
-    .club_ecoupon_center,
-    .club_QA_txt,
-    .club_login_txt,
-    .club_member_rule,
-    .club_giftcards,
-    .club_delivery_txt{width:420px;font-size: 20px;margin: 0 auto}
-    .club_login_txt {margin:0;}
-    .club_member_table td, .club_member_table th{padding:10px 5px;}
-    .club_ecoupon_nav{position: absolute;top: 0;left:0;display: none}
-    .club_member_sub{font-size: 18px;width: 334px}
-    .club_memberreg_tips{display: none}
-    .club_memberreg_seltxt,
-    .club_login_ipt{width: 300px}
-    .club_memberreg_sel{width: 332px;left:2px}
-    .club_login_form{width: 400px}
-    .club_login_ipt{float: none;display: block;margin: 0 0 15px 0;}
-    .club_login_sub{float: none;display: block;margin: 0  ;width: 334px;font-size: 18px}
-    .club_login_formlink{font-size:18px;width: 334px;margin: 20px 0;float: none;display: block;}
-    .club_login_regbtn{width: 334px;}
-    .club_login_regtxt{font-size: 18px}
-    .club_ecoupon_center,
-    .club_giftcards{padding-left:0;}
-    .club_ecoupon_com{float: none;margin: 0 auto}
-    .menu{left:0;top:30px;width: 70px;height: 70px}
-    .loading,
-    .search,
-    .language{display: none}
-    .mobile_nav{position:fixed;top: 30px;left:102px;font-size: 18px;color:#fff;height: 70px;line-height: 70px;width: 436px;padding:0 25px;background:#000 url('../images/mobile_nav.gif') no-repeat 450px 50%;cursor: pointer;z-index: 300}
-    .mobile_nav:hover .mobile_navbox{display: block;}
-    .mobile_navbox{position: absolute;width: 486px;background: #fff;left:0;top: 70px;line-height: 60px;display: none}
-    .mobile_navbox a{display: block;padding:0 25px;}
-    .mobile_navbox strong{padding-top:20px;display: block;}
 
-    .club_mobilecardimg{float: left;margin-top:10px;}
-    .club_img,
-    .club_mobilecardimg .club_img{background:none;width: 253px;margin: 0}
-    .club_img img,
-    .club_mobilecardimg img{width:238px;height: 238px}
-    .club_pointimglist li {height:auto;}
-    .club_pointimglist .product-name,.club_pointimglist .product-attr {font-size:18px;}
-    .club_imgtxt{width: 250px;top:75px;}
-    .mobile_proinfor{float: right;width: 238px;line-height: 30px}
-    .mobile_proitem {width: 520px;margin-top:50px;}
-    .mobile_proinfortit{padding-top:5px;text-transform: uppercase;}
-    .mobile_proinfor a{text-decoration: underline;}
-    .club_giftcardcheckout{float: none;display: block;margin: 80px auto 0}
-    .club_giftcard{width: 600px;}
-    .club_ecoupon_center,
-    .club_point{width: 580px}
-    .club_pointexnav{display: none;}
-    .club_ecoupon_center{padding: 0}
-    .club_point table span.title {width:auto;}
-    .club_point table td {padding:5px;}
-
-    .club_meminfolist ul{float: none}
-    .club_meminpwform input{float: none;display: block;margin-bottom:20px;}
-
-    .club_login_wrap {width:auto;}
-    .club_login_left {float:none;width:443px;margin:0 auto;}
-    .club_login_right {float:none;width:443px;margin:20px auto 0 auto;}
-    .club_login_regbtn {margin:20px 0 0 0;}
-
-    .product-view .product-img-box {width:90%;margin:0 0 20px 5%;float:none;}
-    .product-view .product-shop {float:none;width:auto;clear:both;padding:20px 0 0;margin-left:5%;}
-    .product-intro {margin-left:5%;}
-    .product-intro p {margin:0;}
-    .product-name h1 {font-size:24px;margin-bottom:40px;}
-    .product-view .link-wishlist {font-size:20px;}
-
-    .header {height:0!important;}
-    .club_ecoupon_nav_m {display:block;z-index:100;position: fixed;top:12px;left:20%;width:70%;font-size:20px;}
-    .club_welcome_m {background:#000;color:#fff;font-weight:bold;height:100px;line-height:100px;padding:0 40px;}
-    .club_navlist_m {display:none;background:#fff;padding:20px 0 20px 40px;color:#000;}
-    .club_navlist_m.open {display:block;}
-    .club_navlist_m a {display:block;margin:15px 0;}
-    .club_logout_m {margin-top:40px;font-weight:bold;}
-
-    .club_memberreg_fi_code .club_memberreg_tips {left:390px;display:block;}
-    .club_memberreg_fi_code .club_login_ipt {width:200px;}
-    .club_memberreg_fi_code .club_member_sub {width:184px;}
-    .club_memberreg_fi .club_login_ipt_address {margin:10px 0 0 130px;}
-    .club_giftcardtable {font-size:13px;}
-    .add-to-links li {font-size:20px;}
-
-    button.button span {font-size:20px;}
-    .button.btn-cart span {background:none!important;border:none;}
-    .error-msg, .success-msg, .note-msg, .notice-msg {font-size:14px;}
-    .club_giftcardtable .remove-text {font-size:14px;}
-    .form-before {padding:0;transform:scale(0.68);-moz-transform:scale(0.68);-webkit-transform:scale(0.68);-o-transform:scale(0.68);
-        transform-origin:0 0;-moz-transform-origin:0 0;-webkit-transform-origin:0 0;-o-transform-origin:0 0;}
-
-    .page_club .cart, .page_club .points_checkout {width:580px;float:none;}
-    .cart .cart-collaterals {font-size:14px;}
-    button.button.btn-continue span {font-size:14px;}
-    #points_checkout_form .content {font-size:14px;}
-
-    .club_bottom_nav {margin:30px 0;}
-    .club_welcome_m {background:#000 url('../images/m_nav_arrow.png') no-repeat 380px center;}
 }
