--- a/app/design/frontend/base/default/template/points/checkout.phtml
+++ b/app/design/frontend/base/default/template/points/checkout.phtml
@@ -9,7 +9,7 @@
 		</div>
 		
 		<form id="points_checkout_form" method="post" action="">
-			<div class="content-wrapper">
+			<div class="content-wrapper order-userinfo">
 			<div class="content">
 				<h2><?php echo $this->__('Confirm Member Info') ?></h2>
 				 <ul class="form-list">
@@ -39,7 +39,7 @@
 			
 			<div class="content-wrapper exchange-list">
 			<div class="content">
-			<h2><?php echo $this->__('Exchanged gift list detail') ?></h2>
+
 			
 			<?php echo $this->getChildHtml('points_review'); ?>
 			<div class="button-set back-to-cart">
