--- a/app/design/frontend/base/default/template/points/shipping.phtml
+++ b/app/design/frontend/base/default/template/points/shipping.phtml
@@ -20,7 +20,7 @@
 			</div>
 		</li>
 		<?php else:?>
-		<li>
+		<li style="display:none;">
 			<div class="input-box">
 				<label for="express"><?php echo $this->__('Express with 1500 points') ?>(<?php echo $this->__("Not enough points")?>)</label>
 			</div>
