--- a/app/design/frontend/default/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/default/default/template/customer/form/edit.phtml
@@ -93,7 +93,7 @@
                                 <input type="password" class="required-entry" name="confirmation" id="confirmation"  placeholder="<?php echo $this->__("Confirm new password*")?>" />
                                 <input type="hidden" name="change_password" value="1" />
                             </div>
-                            <input type="submit" value="<?php echo $this->__("Save")?>" class="club_meminpwsub" />
+                            <button type="submit" value="<?php echo $this->__("Save")?>" class="club_meminpwsub"><?php echo $this->__("Save")?></button>
                         </form>
                     </div>
                 </div>
