--- a/app/design/frontend/default/default/template/persistent/customer/form/mini-login.phtml
+++ b/app/design/frontend/default/default/template/persistent/customer/form/mini-login.phtml
@@ -63,7 +63,7 @@
                                     <div class="club_login_formlink">
                                         <a href="<?php echo $this->getForgotPasswordUrl() ?>" class="forgot-password"><?php echo $this->__("Forget your Password")?> ? </a></div>
                                 </div>
-                                <div class="cs-clear"><input class="club_login_sub" type="submit" value="<?php echo $this->__("Login")?>" /></div>
+                                <div class="cs-clear"><button class="club_login_sub" type="submit" value="<?php echo $this->__("Login")?>"><?php echo $this->__("Login")?></button></div>
                             </form>
                         </div>
                     </div>
