--- a/skin/frontend/base/default/css/lily/css/response.css
+++ b/skin/frontend/base/default/css/lily/css/response.css
@@ -250,7 +250,7 @@
     .club_login_txt,
     .club_member_rule,
     .club_giftcards,
-    .club_delivery_txt{width:420px;font-size: 20px;margin: 0 auto}
+    .club_delivery_txt{width:420px;font-size: 18px;margin: 0 auto}
     .club_login_txt {margin:0;}
     .club_member_table td, .club_member_table th{padding:10px 5px;}
     .club_ecoupon_nav{position: absolute;top: 0;left:0;display: none}
@@ -261,9 +261,10 @@
     .club_memberreg_sel{width: 332px;left:2px}
     .club_login_form{width: 400px}
     .club_login_ipt{float: none;display: block;margin: 0 0 15px 0;}
-    .club_login_sub{float: none;display: block;margin: 0  ;width: 334px;font-size: 18px}
+    #login-form .club_login_ipt {width:387px;}
+    .club_login_sub{float: none;display: block;margin: 0 ;width: 419px;font-size: 18px}
     .club_login_formlink{font-size:18px;width: 334px;margin: 20px 0;float: none;display: block;}
-    .club_login_regbtn{width: 334px;}
+    .club_login_regbtn{width: 419px;}
     .club_login_regtxt{font-size: 18px}
     .club_ecoupon_center,
     .club_giftcards{padding-left:0;}
@@ -294,7 +295,6 @@
     .club_giftcard{width: 600px;}
     .club_ecoupon_center,
     .club_point{width: 580px}
-    .club_pointexnav{display: none;}
     .club_ecoupon_center{padding: 0}
     .club_point table span.title {width:auto;}
     .club_point table td {padding:5px;}
@@ -315,8 +315,8 @@
     .product-view .link-wishlist {font-size:20px;}
 
     .header {height:0!important;}
-    .club_ecoupon_nav_m {display:block;z-index:100;position: fixed;top:12px;left:20%;width:70%;font-size:20px;}
-    .club_welcome_m {background:#000;color:#fff;font-weight:bold;height:100px;line-height:100px;padding:0 40px;}
+    .club_ecoupon_nav_m {display:block;z-index:100;position: fixed;top:30px;left:20%;width:70%;font-size:20px;}
+    .club_welcome_m {background:#000;color:#fff;font-weight:bold;height:70px;line-height:70px;padding:0 40px;}
     .club_navlist_m {display:none;background:#fff;padding:20px 0 20px 40px;color:#000;}
     .club_navlist_m.open {display:block;}
     .club_navlist_m a {display:block;margin:15px 0;}
@@ -345,10 +345,10 @@
     .club_welcome_m {background:#000 url('../images/m_nav_arrow.png') no-repeat 380px center;}
     .club_login_labels {display: none;}
     .club_article_center {width:580px;}
-    .reg-disable-layout {width:640px;height:496px;}
+    .reg-disable-layout {width:640px;height:666px;}
     .club_memberreg {width:600px;}
     .password-titles {display: none;}
-    .club_ecoupon_com {width: 600px;}
+    .club_ecoupon_com {width: 600px;overflow: hidden;}
     .club_meminfolist1 li {width: 500px;}
     .club_meminfolist2 li {width: 500px;}
     .club_meminfolist li strong {width:290px;}
@@ -356,6 +356,17 @@
     .customer_address_mobile_wrap {display:block;margin:10px 0 0 132px}
     #my-orders-table .title {display: none!important;}
     .product-shop .product-attr-name, .product-shop .attribute-title {width:142px;}
+    .cart-table .product-name {display:block;float:none;clear:both;}
+    .order-userinfo,.shipping-method {margin-left:120px;margin-right:120px;}
+    .order-info-box h2 {font-size:18px;}
+    .order-info-box .box-content label {width:160px;}
+    .orderinfo {margin-left:100px;}
+    .club_giftcardtable .remove-text {display:block;clear:both;}
+    .club_memberreg_fi .club_login_ipt_short {width:303px;}
+    .pager .pages {width:640px;overflow: hidden;}
+    .pager .pages ol {padding:0;margin:0 0 0 -53px;}
+    .col2-set .col-1 {width:auto;float:none;}
+    .pager .jspages {margin-left:-26px;}
 }
 /* mobile menu part */
 body.mobile,
